--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.h2.console.enabled=true
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/db_clinicaodontologica_carlos
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql=true
 server.port=8081
+
